# git

./: .env.example  .env.production.example  .gitignore  AGENTS.md  MEMORY.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  vercel.json
.husky/: pre-commit
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: agent.py  ai.py  auth.py  charts.py  dashboards.py  datasets.py  health.py  insights.py  jobs.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/repositories/: agent_runs.py  ai_conversations.py  auth.py  charts.py  dashboards.py  datasets.py  insights.py  jobs.py  records.py
apps/api/app/schemas/: agent.py  ai.py  auth.py  chart.py  dashboard.py  dataset.py  insight.py  job.py
apps/api/app/services/: agent.py  auth.py  dashboards.py  datasets.py  insights.py  jobs.py  storage.py
apps/api/app/services/ai/: __init__.py  dataset_qa.py  service.py
apps/api/app/services/ai/providers/: __init__.py  base.py  factory.py  mimo.py
apps/api/app/services/analysis/: __init__.py  profiler.py
apps/api/app/services/charts/: __init__.py  recommender.py  service.py
apps/api/app/tasks/: celery_app.py  datasets.py
apps/api/tests/: test_dataset_qa_tools.py
docs/: production-readiness.md  step-01-architecture.md  step-02-initialization.md  step-03-authentication.md  step-04-file-upload.md  step-05-csv-parsing.md  step-06-chart-generation.md  step-07-ai-qa.md  step-08-ai-insights.md  (+4 more)
(+50 files in other folders)
