[project]
name = "ai-data-analysis-api"
version = "0.1.0"
description = "FastAPI backend for the AI data analysis SaaS platform."
requires-python = ">=3.10,<3.11"
dependencies = [
  "celery>=5.4",
  "email-validator>=2.2",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pandas>=2.2",
  "psycopg[binary]>=3.2",
  "PyJWT[crypto]>=2.10",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
